@@ -1,3 +1,8 @@
+2009-12-02  Per Bothner  <per@bothner.com>
+
+	* KDocument.java (getDocumentElement): Need to skip comments.
+	Also make return type more specific.
+
 2008-09-05  Per Bothner  <per@bothner.com>
 
 	* XDataType.java (untypedType): New XDataType for xs:untyped.
